--- a/sites/bestellen.html
+++ b/sites/bestellen.html
@@ -11,7 +11,7 @@
     <header>
     <nav>
         <ul>
-            <a href="home.html"><img src="../pictures/logo.webp" alt="Homepage Logo"></a>
+            <li><a href="home.html"><img src="../pictures/logo.webp" alt="Homepage Logo"></a></li>
             <li><a href="home.html">Home</a></li>
             <li><a href="jets.html">Jets</a></li>
             <li>Hersteller
@@ -38,7 +38,7 @@
       <label>E-Mail:</label><br>
       <input type="email" name="email" placeholder="pete.mitchell@example.net"><br><br>
       <label>Welcher Flieger willst du bestellen?</label><br>
-      <select name="jets" id="jets" placeholder="Wähle Flieger aus">
+      <select name="jets" id="jets">
         <option value="f22">F-22</option>
         <option value="f35">F-35</option>
         <option value="fa18">FA-18</option>
