--- a/sites/hersteller/lockheedmartin.html
+++ b/sites/hersteller/lockheedmartin.html
@@ -11,7 +11,7 @@
     <header>
     <nav>
         <ul>
-            <a href="home.html"><img src="../../pictures/logo.webp" alt="Homepage Logo"></a>
+            <li><a href="home.html"><img src="../../pictures/logo.webp" alt="Homepage Logo"></a></li>
             <li><a href="../home.html">Home</a></li>
             <li><a href="../jets.html">Jets</a></li>
             <li>Hersteller
