--- a/sites/jets/f35.html
+++ b/sites/jets/f35.html
@@ -11,14 +11,14 @@
     <header>
         <nav>
             <ul>
-                <a href="home.html"><img src="../pictures/logo.webp" alt="Homepage Logo"></a>
+                <li><a href="../home.html"><img src="../../pictures/logo.webp" alt="Homepage Logo"></a></li>
                 <li><a href="../home.html">Home</a></li>
                 <li><a href="../jets.html">Jets</a></li>
                 <li>Hersteller
                 <ul>
-                    <li><a href="lockheedmartin.html">Lockheed Martin</a></li>
-                    <li><a href="boeing.html">Boeing</a></li>
-                    <li><a href="airbus.html">Airbus</a></li>
+                    <li><a href="../hersteller/lockheedmartin.html">Lockheed Martin</a></li>
+                    <li><a href="../hersteller/boeing.html">Boeing</a></li>
+                    <li><a href="../hersteller/airbus.html">Airbus</a></li>
                 </ul>
                 </li>
                 <li><a href="../bestellen.html">Bestellen</a></li>
