Impressum Liste hinzugefügt

--- a/sites/impressum.html
+++ b/sites/impressum.html
@@ -38,9 +38,9 @@
             <p>Telefon: +41 79 720 36 02</p><br>
             <h4>Haftungsaschluss</h4><br>
             <h4>1. Haftung für Inhalte</h4><br>
-            <p>Die Inhalte dieser Webseite wurden mit größter Sorgfalt erstellt. 
+            <p>Die Inhalte dieser Webseite wurden mit grösster Sorgfalt erstellt. 
                 Für die Richtigkeit, Vollständigkeit und Aktualität der Inhalte übernehme ich jedoch keine Gewähr. 
-                Als Betreiber bin ich gemäß § 7 Abs. 1 TMG für eigene Inhalte auf dieser Webseite nach den allgemeinen Gesetzen verantwortlich. 
+                Als Betreiber bin ich gemäss § 7 Abs. 1 TMG für eigene Inhalte auf dieser Webseite nach den allgemeinen Gesetzen verantwortlich. 
                 Nach §§ 8 bis 10 TMG bin ich jedoch nicht verpflichtet, übermittelte oder gespeicherte fremde Informationen zu überwachen oder nach Umständen zu forschen, die auf eine rechtswidrige Tätigkeit hinweisen. 
                 Verpflichtungen zur Entfernung oder Sperrung der Nutzung von Informationen nach den allgemeinen Gesetzen bleiben hiervon unberührt. 
                 Eine diesbezügliche Haftung ist jedoch erst ab dem Zeitpunkt der Kenntnis einer konkreten Rechtsverletzung möglich. 
@@ -50,14 +50,14 @@
             <p>Diese Webseite enthält Links zu externen Webseiten Dritter, auf deren Inhalte ich keinen Einfluss habe. 
                 Deshalb kann ich für diese fremden Inhalte auch keine Gewähr übernehmen. 
                 Für die Inhalte der verlinkten Seiten ist stets der jeweilige Anbieter oder Betreiber der Seiten verantwortlich. 
-                Die verlinkten Seiten wurden zum Zeitpunkt der Verlinkung auf mögliche Rechtsverstöße überprüft. 
+                Die verlinkten Seiten wurden zum Zeitpunkt der Verlinkung auf mögliche Rechtsverstösse überprüft. 
                 Rechtswidrige Inhalte waren zum Zeitpunkt der Verlinkung nicht erkennbar. 
                 Eine permanente inhaltliche Kontrolle der verlinkten Seiten ist jedoch ohne konkrete Anhaltspunkte einer Rechtsverletzung nicht zumutbar. 
                 Bei Bekanntwerden von Rechtsverletzungen werde ich derartige Links umgehend entfernen.
             </p><br>
             <h4>3. Urheberrecht</h4><br>
             <p>Die durch den Betreiber dieser Webseite erstellten Inhalte und Werke auf diesen Seiten unterliegen dem Urheberrecht. 
-                Die Vervielfältigung, Bearbeitung, Verbreitung und jede Art der Verwertung außerhalb der Grenzen des Urheberrechtes bedürfen der schriftlichen Zustimmung des jeweiligen Autors bzw. Erstellers. 
+                Die Vervielfältigung, Bearbeitung, Verbreitung und jede Art der Verwertung ausserhalb der Grenzen des Urheberrechtes bedürfen der schriftlichen Zustimmung des jeweiligen Autors bzw. Erstellers. 
                 Downloads und Kopien dieser Seite sind nur für den privaten, nicht kommerziellen Gebrauch gestattet. 
                 Soweit die Inhalte auf dieser Seite nicht vom Betreiber erstellt wurden, werden die Urheberrechte Dritter beachtet. 
                 Insbesondere werden Inhalte Dritter als solche gekennzeichnet. Sollten Sie trotzdem auf eine Urheberrechtsverletzung aufmerksam werden, bitte ich um einen entsprechenden Hinweis. 
@@ -88,6 +88,20 @@
             <p>Engehalde 26</p><br>
             <p>3012 Bern</p><br>
             <p>E-Mail: arvin.nathan@ict-campus.net</p><br>
+            <h4>2. Erhebung und Verarbeitung personenbezogener Daten</h4><br>
+            <p>Beim Besuch dieser Webseite werden automatisch folgende Daten erhoben:</p><br>
+            <ul class="list">
+                <li>IP-Adresse</li>
+                <li>Datum und Uhrzeit des Zugriffs</li>
+                <li>Verwendeter Browser und Betriebssystem</li>
+            </ul><br><br>
+            <p>Die Verarbeitung dieser Daten erfolgt auf Grundlage berechtigter Interessen (Art. 6 Abs. 1 lit. f DSGVO), um die Sicherheit und Funktionalität der Webseite zu gewährleisten.</p><br>
+            <h4>3. Weitergabe von Daten</h4><br>
+            <p>Personenbezogene Daten werden nicht an Dritte weitergegeben, es sei denn, dies ist gesetzlich vorgeschrieben.</p><br>
+            <h4>4. Rechte der Nutzer</h4><br>
+            <p>Sie haben das Recht auf Auskunft, Berichtigung, Löschung und Einschränkung der Verarbeitung Ihrer personenbezogenen Daten. 
+                Bitte kontaktieren Sie mich hierzu unter arvin.nathan@ict-campus.net.
+            </p>
         </div>
 
 
